# hacky_sac

./: CMakeLists.txt  COPYING.txt  README.md
.github/workflows/: build-and-test.yml
examples/: CMakeLists.txt
examples/hacky_toolkit/: CMakeLists.txt
examples/hacky_toolkit/hacky_toolkit/: line2.hpp  line2d.hpp  plane.hpp  plane_utils.hpp
examples/line2/: CMakeLists.txt  line2.cpp
examples/line2d/: CMakeLists.txt  line2d.cpp
src/: CMakeLists.txt
src/hacky_sac/: ransac.hpp
test/: CMakeLists.txt  line2d_test.cpp  plane_test.cpp  ransac_test.cpp
